// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`heading snapshots Heading: 0 1`] = `
<h1
  className="typography-0-1-1 typography__1-0-1-2 heading-0-1-11 heading__1-0-1-12"
>
  Heading test string
</h1>
`;

exports[`heading snapshots Heading: 1 1`] = `
<h1
  className="typography-0-1-1 typography__1-0-1-2 heading-0-1-11 heading__1-0-1-12"
  data-sketch-symbol="Heading 1"
>
  Heading test string
</h1>
`;

exports[`heading snapshots Heading: 2 1`] = `
<h2
  className="typography-0-1-1 typography__2-0-1-3 heading-0-1-11 heading__2-0-1-13"
  data-sketch-symbol="Heading 2"
>
  Heading test string
</h2>
`;

exports[`heading snapshots Heading: 3 1`] = `
<h3
  className="typography-0-1-1 typography__3-0-1-4 heading-0-1-11 heading__3-0-1-14"
  data-sketch-symbol="Heading 3"
>
  Heading test string
</h3>
`;

exports[`heading snapshots Heading: 4 1`] = `
<h4
  className="typography-0-1-1 typography__4-0-1-5 heading-0-1-11 heading__4-0-1-15"
  data-sketch-symbol="Heading 4"
>
  Heading test string
</h4>
`;

exports[`heading snapshots Heading: 5 1`] = `
<h5
  className="typography-0-1-1 typography__5-0-1-6 heading-0-1-11 heading__5-0-1-16"
  data-sketch-symbol="Heading 5"
>
  Heading test string
</h5>
`;

exports[`heading snapshots Heading: 6 1`] = `
<h6
  className="typography-0-1-1 typography__6-0-1-7 heading-0-1-11 heading__6-0-1-17"
  data-sketch-symbol="Heading 6"
>
  Heading test string
</h6>
`;
